src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <displayFormat>CID-{00000000}</displayFormat>
        <label>Contact ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Deskcom__twitter_username__c</fullName>
        <label>Twitter Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Coborrower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coborrower</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Coborrower</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ints__Employer__c</fullName>
        <description>Contact&apos;s Employer field for Lenddo verification.</description>
        <label>Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Is_Lenddo_Verified__c</fullName>
        <description>Check box to determine if the contact information is sent to Lenddo for verification vis the Lenddo Button or not.</description>
        <inlineHelpText>Check box to determine if the contact information is sent to Lenddo for verification via the Lenddo Button or not. Checked if contact info and social networking site credentials have been sent to Lenddo.</inlineHelpText>
        <label>Is Lenddo Verified?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ints__Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Routing_Number__c</fullName>
        <label>Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__SSN__c</fullName>
        <label>SSN(deprecated)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>11</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__University__c</fullName>
        <description>Contact University field for Lenddo verification.</description>
        <label>University</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>loan__Office_Name__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Contact_Type__c</fullName>
        <description>Type of the contact</description>
        <inlineHelpText>Type of the contact</inlineHelpText>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undefined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Monthly_Income__c</fullName>
        <label>Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Mode__c</fullName>
        <description>Payment mode, used to disburse payments back to broker.</description>
        <inlineHelpText>Payment mode, used to disburse payments back to broker.</inlineHelpText>
        <label>Payment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Tax_Id__c</fullName>
        <description>Tax Id of the broker</description>
        <inlineHelpText>Tax Id of the broker</inlineHelpText>
        <label>Tax Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>region__c</fullName>
        <label>region</label>
        <picklist>
            <picklistValues>
                <fullName>AB - (Aberdeen)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL - (St. Albans)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B - (Birmingham)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA - (Bath)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB - (Blackburn)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD - (Bradford)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH - (Bournemouth)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL - (Bolton)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN - (Brighton)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR - (Bromley)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS - (Bristol)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT - (Belfast)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - (Carlisle)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB - (Cambridge)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CF - (Cardiff)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH - (Chester)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM - (Chelmsford)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO - (Colchester)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR - (Croydon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT - (Canterbury)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CV - (Coventry)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CW - (Crewe)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA - (Dartford)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD - (Dundee)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE - (Derby)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DG - (Dumfries)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DH - (Durham)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DL - (Darlington)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DN - (Doncaster)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT - (Dorchester)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <label>Vendor</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>